test/variable/duplicate_parameter.lox
fn foo(arg,
        arg) { // error: already declared variable in this scope
  "body"
}
